@@ -24,6 +24,8 @@
 	<string>1.99.1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>CFBundleShortVersionString</key>
+	<string></string>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
 </dict>
